modified delete koi by id
