# koicare/models/koi.js
@@ -38,39 +38,58 @@ const createKoi = (name, image, body_shape, age, size, weight, gender, breed, or
 
 // Update pond by ID
 const updateKoiById = (id, name, image, body_shape, age, size, weight, gender, breed, origin, pond_id, callback) => {
-    
+
     if (!name || !image || !body_shape || age <= 0 || size <= 0 || weight <= 0 || !gender || !breed || !origin || pond_id <= 0) {
-      return callback(new Error('Invalid input data'), null);
+        return callback(new Error('Invalid input data'), null);
     }
     if (!['male', 'female'].includes(gender)) {
-      return callback(new Error('Invalid gender value. Must be "male" or "female".'), null);
+        return callback(new Error('Invalid gender value. Must be "male" or "female".'), null);
     }
-  
+
     const query = `UPDATE Koi
     SET name = ?, image = ?, body_shape = ?, age = ?, size = ?, weight = ?, gender = ?, breed = ?, origin = ?, pond_id = ?
     WHERE id = ?;`;
     db.query(query, [name, image, body_shape, age, size, weight, gender, breed, origin, pond_id, id], (error, results) => {
-      if (error) {
-        return callback(error, null);
-      }
-      return callback(null, results.affectedRows); 
+        if (error) {
+            return callback(error, null);
+        }
+        return callback(null, results.affectedRows);
     });
-  };
+};
 
-// Delete pond by ID
+// Delete Koi by ID
 const deleteKoiById = (id, callback) => {
-    const query = `DELETE FROM Koi WHERE id = ?;`;
-    db.query(query, [id], (error, results) => {
-      if (error) {
-        return callback(error, null); 
-      }
-      if (results.affectedRows === 0) {
-        return callback(new Error('Koi not found.'), null); 
-      } else {
-        return callback(null, results.affectedRows); 
-      }
+    db.beginTransaction((err) => {
+        if (err) {
+            return callback(err, null);
+        }
+        try {
+            const deleteGrowthRecordsQuery = `DELETE FROM Koi_growth_record WHERE koi_id = ?`;
+            db.query(deleteGrowthRecordsQuery, [id], (error, deleteResult) => {
+                if (error) {
+                    throw error;
+                }
+                const deleteKoiQuery = `DELETE FROM Koi WHERE id = ?`;
+                db.query(deleteKoiQuery, [id], (error, koiResult) => {
+                    if (error) {
+                        throw error;
+                    }
+                    db.commit((err) => {
+                        if (err) {
+                            throw err;
+                        }
+                        callback(null, koiResult.affectedRows);
+                    });
+                });
+            });
+        } catch (error) {
+            db.rollback(() => {
+                console.error('Error deleting koi:', error);
+                callback(error, null);
+            });
+        }
     });
-  };
+};
 
 // Get all koi
 const getAllKoi = (callback) => {
